@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.105 2005/04/29 06:25:14 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.106 2005/04/30 07:42:49 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
+
+  30 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
+  Add 'Format' to PartProperties
 
   29 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
   Split 'custom' sync option into 'none' and 'snapshot'.
